# attention-gym

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish-to-pypi.yml  ruff.yml  test.yml
attn_gym/: __init__.py  utils.py
attn_gym/load_balance/: __init__.py  load_balancer.py
attn_gym/masks/: __init__.py  batchify.py  causal.py  dilated_sliding_window.py  document_mask.py  flamingo.py  natten.py  prefix_lm.py  sink_attn.py  sliding_window.py  sta.py  svg.py
attn_gym/mods/: __init__.py  alibi.py  latent_attention.py  softcapping.py
attn_gym/paged_attention/: latency.py  model.py  paged_attention.py  throughput.py  utils.py
benchmarks/: bench_block_mask.py  flex_perf.py
benchmarks/configs/: config_basic.yaml  config_comprehensive.yaml
examples/: batch_invariance_test.py  benchmark.py  debug_score_mod.py  distributed_benchmark.py  flex_attn.ipynb  learnable_bias.py  mla.py
test/: test_causal_block_mask.py  test_mods.py  test_natten.py
